# fixims3

./: flake.nix  haskell-template.cabal
src/: Main.hs  Sims3.hs
src/Sims3/: IO.hs  Install.hs  Modding.hs  Types.hs
src/Sims3/Patches/: Hardware.hs
